Added merging and updating cart logic
